# neunet

./: Makefile  Makefile.am  README  configure.ac  old.Makefile
doc/: neunet-learn.1  neunet-solve.1  neunet.1
include/: algo.h  neurons.h  nn_algo.h  nn_args.h  nn_fileIO.h  nn_hash.h  nn_limits.h  nn_matrix.h  nn_metrics.h  nn_objects.h  nn_string.h
misc/: net_arch.py  synapse-run.sh
src/: algo.c  main.c  neurons.c  nn_algo.c  nn_args.c  nn_fileIO.c  nn_hash.c  nn_matrix.c  nn_metrics.c  nn_objects.c  nn_string.c  perceptron.c
